--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand"><img src="./src/logo3.jpg" style="width: 150px; height: 50px; padding-bottom: 10px"></a>
+                <a class="navbar-brand"><img src="src/Logo3.jpg" style="width: 150px; height: 50px; padding-bottom: 10px"></a>
             </div>
             <div class="collapse navbar-collapse"id=myNavbar>
                 <ul class="nav navbar-nav" style="padding-top: 19px">
@@ -57,8 +57,8 @@
                 </div>
                 <div class="pull-right">
                     <img src="src/twitterIco.png" style="height: 30px; width: 30px">
-                    <img src="./src/facebookIco.png" style="height: 24px; width: 24px">
-                    <img src="./src/shareIco.png" style="height: 25px; width: 25px">
+                    <img src="src/facebookIco.png" style="height: 24px; width: 24px">
+                    <img src="src/shareIco.png" style="height: 25px; width: 25px">
                 </div>
             </div>
             <div>
