chakyrov index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <main>
     <div class="container">
         <div>
-            <p><h1>Взривиха къщата на бизнесмен в София</h1></p>
+            <p><h1>Аферата Дженерик срина здравната система!</h1></p>
             <hr>
         </div>
 
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div>
-                <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="src/ivoFotev.jpg">
+                <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="src/afair1.jpg">
                 <br>
             </div>
             <div class="col-sm-12">
@@ -74,25 +74,14 @@
                 </div>
             </div>
             <div>
-                <h4>Разследвания за криминална дейност бизнесмен Иво Фотев, стана жертва на показно покушение.</h4>
+                <h4>Заместник министър Пламен Чакъров обвинен в
+                    конфликт на интереси.</h4>
             </div>
             <div>
                 <hr style="margin: 10px">
                 <article>
-                    Рано тази сутрин живущите в близост до луксозната къща на разледвания за
-                    корупционни схеми и криминална дейност бизнесмен Иво Фотев били разтърсени
-                    от мощен взрив. Къщата на подземния бос е разрушена до основи. Пожарът е
-                    потушен. Експертни групи все още оглеждат мястото. Предстоят експертизи,
-                    които трябва да потвърдят или отхвърлят хипотезата дали овъгленото тяло е
-                    на Иво Фотев. Службите на гражданска защита и пожарната съдействат на гражданите,
-                    пострадали при произшествието. Към момента се предполага, че бизнесменът е бил сам
-                    в дома си, когато е избухнала бомбата. Припомняме, че Иво Фотев се свърза със сделки
-                    от подземния свят. Преди година бизнесменът беше уличен в крупна финансова измама и опит
-                    да превърне болница "Свети Кирил" в казино. Съдът два пъти отлага делото слещу него, като
-                    през това време Фотев остава под домашен арест. Атентата е извършен в една от къщите
-                    собственост на бизнесмена. Извършителите, както и мотивите им все още остават неясни.
-                    Източници близки до разследващите органи споделят, че най-вероятно става въпрос за
-                    разчистване на сметки в подземния свят.
+                    Говори се за
+                    политически чадър в бизнес с онколекарства...
                 </article>
             </div>
         </div>
