--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <main>
     <div class="container">
         <div>
-            <p><h1>Аферата Дженерик срина здравната система!</h1></p>
+            <p><h1>Аферата Дженерик срина здравната система</h1></p>
             <hr>
         </div>
 
@@ -62,14 +62,14 @@
                 </div>
             </div>
             <div>
-                <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="src/afair1.jpg">
+                <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="./src/afair1.jpg">
                 <br>
             </div>
-            <div class="col-sm-12">
-                <div class="pull-left">
+            <div class="row">
+                <div class="pull-left" style="margin-left: 15px">
                     <p style="color: darkred">Обновена - 22:34</p>
                 </div>
-                <div class="pull-right">
+                <div class="pull-right" style="margin-right: 15px">
                     <p style="color: #DCDCDC">Автор: 24 NEWS</p>
                 </div>
             </div>
