--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Туризъм</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-search"></span> Търси</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Регистрация</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Вход</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span></a></li>
                 </ul>
             </div>
         </div>
@@ -44,13 +44,13 @@
 </header>
 <main>
     <div class="container">
-        <div>
+        <div style="margin-left: 20px">
             <p><h1>Аферата Дженерик срина здравната система</h1></p>
             <hr>
         </div>
 
 
-        <div class="col-sm-9">
+        <div class="col-md-9">
             <div>
                 <div class="pull-left">
                     <a style="color: darkred; margin-bottom: 15px">Новини/Ексклузивно</a>
@@ -67,7 +67,7 @@
             </div>
             <div class="row">
                 <div class="pull-left" style="margin-left: 15px">
-                    <p style="color: darkred">Обновена - 22:34</p>
+                    <p style="color: darkred">Обновена - 10:23</p>
                 </div>
                 <div class="pull-right" style="margin-right: 15px">
                     <p style="color: #DCDCDC">Автор: 24 NEWS</p>
@@ -81,11 +81,18 @@
                 <hr style="margin: 10px">
                 <article>
                     Говори се за
-                    политически чадър в бизнес с онколекарства...
+                    политически чадър в бизнес с онколекарства.
+                    Схемите според държавното обвинение са били две.
+                    При едната се купували лекарства от различни лекари,
+                    които в последствие били заменяни с такива с изтекъл срок на годност или неясен произход.
+                    Втората схема е отклоняване на лекарства, които не били вливани на пациентите.
+
+
+
                 </article>
             </div>
         </div>
-        <div class="col-sm-3" style="background-color: #F0F0F0">
+        <div class="col-md-3" style="background-color: #F0F0F0">
             <div style="margin-top: 29px">
                     <h4 style="color: black">Протест на жълтите павета</h4>
                     <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
