--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <script src="./scrypts/bootstrap.js"></script>
     <title>24 News</title>
 </head>
-<body>
-<header>
-    <nav class="navbar navbar-inverse navbar-fixed-top" >
+<body style="padding-top: 0px">
+    <nav class="navbar navbar-default" style="padding: 0px">
         <div class="container-fluid">
             <div class="navbar-header" >
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -34,22 +33,18 @@
                     <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Туризъм</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-search"> Търси</span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-user"> Вход</span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"> Регистрация</span></a></li>
                 </ul>
             </div>
         </div>
     </nav>
-</header>
-<main>
     <div class="container">
         <div style="margin-left: 20px">
             <p><h1>Аферата Дженерик срина здравната система</h1></p>
             <hr>
         </div>
-
-
         <div class="col-md-9">
             <div>
                 <div class="pull-left">
@@ -86,23 +81,20 @@
                     При едната се купували лекарства от различни лекари,
                     които в последствие били заменяни с такива с изтекъл срок на годност или неясен произход.
                     Втората схема е отклоняване на лекарства, които не били вливани на пациентите.
-
-
-
                 </article>
             </div>
         </div>
         <div class="col-md-3" style="background-color: #F0F0F0">
             <div style="margin-top: 29px">
-                    <h4 style="color: black">Протест на жълтите павета</h4>
-                    <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
-                <small style="color: darkred">Новини/Политика</small>
+                    <h4 style="color: black">Жълт код за валежи</h4>
+                    <img class="img-responsive" src="src/rain.jpg" style="width: 243px; height: 160px; margin: 5px">
+                <small style="color: darkred">Времето</small>
             </div>
 
             <div style="margin-top: 29px">
-                <h4 style="color: black">Очаква ни хубаво време през уикенда</h4>
-                <img class="img-responsive" src="src/fall.jpg" style="width: 243px; height: 160px; margin: 5px">
-                <small style="color: darkred">Времето</small>
+                <h4 style="color: black">Протести в цялата страна</h4>
+                <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
+                <small style="color: darkred">Новини/Политика</small>
             </div>
             <hr>
             <div style="margin-top: 29px">
@@ -110,11 +102,10 @@
                 <img class="img-responsive" src="src/AI.jpg" style="width: 243px; height: 160px; margin: 5px">
                 <small style="color: darkred">Наука</small>
             </div>
-
         </div>
     </div>
 
-</main>
+
 <footer>
     <div class="container modal-footer">
         <p>&copy; 2018 - 24 News Group</p>
