--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p><h1>Аферата Дженерик срина здравната система</h1></p>
             <hr>
         </div>
-        <div class="col-md-9">
+        <div class="col-sm-9">
             <div>
                 <div class="pull-left">
                     <a style="color: darkred; margin-bottom: 15px">Новини/Ексклузивно</a>
@@ -84,27 +84,29 @@
                 </article>
             </div>
         </div>
-        <div class="col-md-3" style="background-color: #F0F0F0">
-            <div style="margin-top: 29px">
-                    <h4 style="color: black">Жълт код за валежи</h4>
+        <div class="row">
+            <div class="col-sm-3 " style="background-color: #F0F0F0">
+                <div style="margin-top: 29px">
+                    <h4 style="color: black; position: center">Жълт код за валежи</h4>
                     <img class="img-responsive" src="src/rain.jpg" style="width: 243px; height: 160px; margin: 5px">
-                <small style="color: darkred">Времето</small>
-            </div>
+                    <small style="color: darkred">Времето</small>
+                </div>
 
-            <div style="margin-top: 29px">
-                <h4 style="color: black">Протести в цялата страна</h4>
-                <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
-                <small style="color: darkred">Новини/Политика</small>
-            </div>
-            <hr>
-            <div style="margin-top: 29px">
-                <h4 style="color: black">Ще измести ли изкуственият интелект човека</h4>
-                <img class="img-responsive" src="src/AI.jpg" style="width: 243px; height: 160px; margin: 5px">
-                <small style="color: darkred">Наука</small>
+                <div style="margin-top: 29px">
+                    <h4 style="color: black">Протести в цялата страна</h4>
+                    <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
+                    <small style="color: darkred">Новини/Политика</small>
+                </div>
+                <hr>
+                <div style="margin-top: 29px">
+                    <h4 style="color: black">Ще измести ли изкуственият интелект човека</h4>
+                    <img class="img-responsive" src="src/AI.jpg" style="width: 243px; height: 160px; margin: 5px">
+                    <small style="color: darkred">Наука</small>
+                </div>
             </div>
         </div>
-    </div>
 
+    </div>
 
 <footer>
     <div class="container modal-footer">
