--- a/index.html
+++ b/index.html
@@ -11,103 +11,131 @@
     <title>24 News</title>
 </head>
 <body style="padding-top: 0px">
-    <nav class="navbar navbar-default" style="padding: 0px">
-        <div class="container-fluid">
-            <div class="navbar-header" >
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand"><img src="src/logo3.jpg" style="width: 150px; height: 50px; padding-bottom: 10px"></a>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header" >
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand"><img src="src/logo3.jpg" style="width: 150px; height: 50px; padding-bottom: 10px"></a>
+        </div>
+        <div class="collapse navbar-collapse"id=myNavbar>
+            <ul class="nav navbar-nav" style="padding-top: 19px">
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Новини</a></li>
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Свят</a></li>
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Спорт</a></li>
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Времето</a></li>
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Култура</a></li>
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Наука</a></li>
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Здраве</a></li>
+                <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Туризъм</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-search"> Търси</span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-user"> Вход</span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-log-in"> Регистрация</span></a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div style="margin-left: 20px">
+        <p><h1>Аферата Дженерик срина здравната система</h1></p>
+        <hr>
+    </div>
+    <div class="col-lg-9 col-xs-12">
+        <div>
+            <div class="pull-left">
+                <a style="color: darkred; margin-bottom: 15px">Новини/Ексклузивно</a>
             </div>
-            <div class="collapse navbar-collapse"id=myNavbar>
-                <ul class="nav navbar-nav" style="padding-top: 19px">
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Новини</a></li>
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Свят</a></li>
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Спорт</a></li>
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Времето</a></li>
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Култура</a></li>
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Наука</a></li>
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Здраве</a></li>
-                    <li style="border: 1px outset gainsboro; border-radius: 6px"><a href="#">Туризъм</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-search"> Търси</span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-user"> Вход</span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"> Регистрация</span></a></li>
-                </ul>
+            <div class="pull-right">
+                <img src="src/twitterIco.png" style="height: 30px; width: 30px">
+                <img src="src/facebookIco.png" style="height: 24px; width: 24px">
+                <img src="src/shareIco.png" style="height: 25px; width: 25px">
             </div>
         </div>
-    </nav>
-    <div class="container">
-        <div style="margin-left: 20px">
-            <p><h1>Аферата Дженерик срина здравната система</h1></p>
-            <hr>
+        <div>
+            <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="./src/afair1.jpg">
+            <br>
         </div>
-        <div class="col-sm-9">
-            <div>
-                <div class="pull-left">
-                    <a style="color: darkred; margin-bottom: 15px">Новини/Ексклузивно</a>
-                </div>
-                <div class="pull-right">
-                    <img src="src/twitterIco.png" style="height: 30px; width: 30px">
-                    <img src="src/facebookIco.png" style="height: 24px; width: 24px">
-                    <img src="src/shareIco.png" style="height: 25px; width: 25px">
-                </div>
+        <div class="row">
+            <div class="pull-left" style="margin-left: 15px">
+                <p style="color: darkred">Обновена - 10:23</p>
             </div>
-            <div>
-                <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="./src/afair1.jpg">
-                <br>
+            <div class="pull-right" style="margin-right: 15px">
+                <p style="color: #DCDCDC">Автор: 24 NEWS</p>
             </div>
-            <div class="row">
-                <div class="pull-left" style="margin-left: 15px">
-                    <p style="color: darkred">Обновена - 10:23</p>
-                </div>
-                <div class="pull-right" style="margin-right: 15px">
-                    <p style="color: #DCDCDC">Автор: 24 NEWS</p>
-                </div>
-            </div>
-            <div>
-                <h4>Заместник министър Пламен Чакъров обвинен в
-                    конфликт на интереси.</h4>
-            </div>
-            <div>
-                <hr style="margin: 10px">
-                <article>
-                    Говори се за
+        </div>
+        <div>
+            <h4>Заместник министър Пламен Чакъров обвинен в
+                конфликт на интереси.</h4>
+        </div>
+        <div>
+            <hr style="margin: 10px">
+            <article>
+                <p>
+                    <span style="color: darkred; font-size: large">Г</span>овори се за
                     политически чадър в бизнес с онколекарства.
-                    Схемите според държавното обвинение са били две.
+                </p>
+                <p>
+                    От прокуратурата описаха две престъпни схеми.
+                    Наблюдаващият прокурор Евгения Харизанова заяви по-рано днес,
+                    че лекарствата, предназначени за онкоболни и закупени от здравната каса,
+                    са излизали от двете болници и чрез износител са стигали най-вероятно
+                    до страни от Европейския съюз, където се продавали законно на много по-високи цени.
+                </p>
+                <p>
                     При едната се купували лекарства от различни лекари,
                     които в последствие били заменяни с такива с изтекъл срок на годност или неясен произход.
                     Втората схема е отклоняване на лекарства, които не били вливани на пациентите.
-                </article>
-            </div>
+                </p>
+                <p>
+                    На лица, нуждаещи се от такива вливания - раково болни, не са вливани,
+                    но са изписвани, че са вливани такива лекарства. Те са лежащо болни хора,
+                    на които срещу името е записано дата, партиден номер, лекарство,
+                    конкретно количество вливане - но това не се е случило.
+                </p>
+            </article>
         </div>
-        <div class="row">
-            <div class="col-sm-3 " style="background-color: #F0F0F0">
-                <div style="margin-top: 29px">
-                    <h4 style="color: black; position: center">Жълт код за валежи</h4>
-                    <img class="img-responsive" src="src/rain.jpg" style="width: 243px; height: 160px; margin: 5px">
-                    <small style="color: darkred">Времето</small>
-                </div>
-
-                <div style="margin-top: 29px">
-                    <h4 style="color: black">Протести в цялата страна</h4>
-                    <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
-                    <small style="color: darkred">Новини/Политика</small>
-                </div>
-                <hr>
-                <div style="margin-top: 29px">
-                    <h4 style="color: black">Ще измести ли изкуственият интелект човека</h4>
-                    <img class="img-responsive" src="src/AI.jpg" style="width: 243px; height: 160px; margin: 5px">
-                    <small style="color: darkred">Наука</small>
-                </div>
-            </div>
+    </div>
+    <div class="row">
+        <div>
+            <ul style="list-style-type: none">
+                <li>
+                    <div class="col-lg-3 col-xs-6" >
+                        <h4 style="color: black; margin: 7px">Жълт код за валежи</h4>
+                        <img class="img-responsive" src="src/rain.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <small style="color: darkred; margin: 7px">Времето</small>
+                    </div>
+                </li>
+                <li>
+                    <div class="col-lg-3 col-xs-6" >
+                        <h4 style="color: black; margin: 7px">Протести в цялата страна</h4>
+                        <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <small style="color: darkred; margin: 7px">Новини/Политика</small>
+                    </div>
+                </li>
+                <li>
+                    <div class="col-lg-3 col-xs-6" >
+                        <h4 style="color: black; margin: 7px">Ще измести ли изкуственият интелект човека</h4>
+                        <img class="img-responsive" src="src/AI.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <small style="color: darkred; margin: 7px">Наука</small>
+                    </div>
+                </li>
+                <li>
+                    <div class="col-lg-3 col-xs-6" >
+                        <h4 style="color: black; margin: 7px">Благотворителен мач на националния стадион</h4>
+                        <img class="img-responsive" src="src/ball.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <small style="color: darkred; margin: 7px">Спорт</small>
+                    </div>
+                </li>
+            </ul>
         </div>
-
     </div>
 
+</div>
 <footer>
     <div class="container modal-footer">
         <p>&copy; 2018 - 24 News Group</p>
