changes to index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <div class="row">
         <div>
-            <ul style="list-style-type: none">
+            <ul style="list-style-type: none; padding: 13px">
                 <li>
                     <div class="col-lg-3 col-xs-6" >
                         <h4 style="color: black; margin: 7px">Жълт код за валежи</h4>
@@ -111,7 +111,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="col-lg-3 col-xs-6" >
+                    <div class="col-lg-3 col-xs-6">
                         <h4 style="color: black; margin: 7px">Протести в цялата страна</h4>
                         <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
                         <small style="color: darkred; margin: 7px">Новини/Политика</small>
