changed main picture

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div>
-            <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="./src/afair1.jpg">
+            <img class="img-responsive" style="float: left; margin-right: 10px; margin-bottom: 15px" src="src/chakyrov2.jpg">
             <br>
         </div>
         <div class="row">
