--- a/index.html
+++ b/index.html
@@ -106,28 +106,28 @@
                 <li>
                     <div class="col-lg-3 col-xs-6" >
                         <h4 style="color: black; margin: 7px">Жълт код за валежи</h4>
-                        <img class="img-responsive" src="src/rain.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <img class="img-responsive img-thumbnail" src="src/rain.jpg">
                         <small style="color: darkred; margin: 7px">Времето</small>
                     </div>
                 </li>
                 <li>
                     <div class="col-lg-3 col-xs-6">
                         <h4 style="color: black; margin: 7px">Протести в цялата страна</h4>
-                        <img class="img-responsive" src="src/protest.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <img class="img-responsive img-thumbnail" src="src/protest.jpg">
                         <small style="color: darkred; margin: 7px">Новини/Политика</small>
                     </div>
                 </li>
                 <li>
                     <div class="col-lg-3 col-xs-6" >
                         <h4 style="color: black; margin: 7px">Ще измести ли изкуственият интелект човека</h4>
-                        <img class="img-responsive" src="src/AI.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <img class="img-responsive img-thumbnail" src="src/AI.jpg">
                         <small style="color: darkred; margin: 7px">Наука</small>
                     </div>
                 </li>
                 <li>
                     <div class="col-lg-3 col-xs-6" >
                         <h4 style="color: black; margin: 7px">Благотворителен мач на националния стадион</h4>
-                        <img class="img-responsive" src="src/ball.jpg" style="width: 243px; height: 160px; margin: 5px">
+                        <img class="img-responsive img-thumbnail" src="src/ball.jpg">
                         <small style="color: darkred; margin: 7px">Спорт</small>
                     </div>
                 </li>
